[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scistudio-blocks-imaging"
version = "0.1.0"
description = "Phase 11 microscopy imaging blocks for SciStudio."
readme = "README.md"
authors = [
    {name = "SciStudio Contributors"},
]
requires-python = ">=3.11"
dependencies = [
    "scistudio>=0.2.1",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "tifffile>=2024.1",
    "zarr>=3.0",
    "matplotlib>=3.8",
    "imageio>=2.33",
    "pillow>=10.0",
    "pydantic>=2.0",
    # ADR-043 / spec adr-043-package-migration FR-017: required (not
    # optional) carrier for canonical OME-XML metadata propagated through
    # ``Image.Meta.ome`` and ``Label.Meta.ome``. Pinned ``>=0.5,<0.6``
    # because ome-types 0.5+ is pydantic v2-native with a stable model API.
    "ome-types>=0.5,<0.6",
]

[project.optional-dependencies]
cellpose = [
    "cellpose>=3.0",
]
# ADR-043 / spec adr-043-package-migration FR-008: ``bioformats`` is an
# optional install extra following the existing ``[cellpose]`` pattern.
# The Bio-Formats handler module
# (``scistudio_blocks_imaging/io/bioformats_handler.py``) lazy-imports
# ``bioformats`` / ``javabridge`` and raises a clear missing-extras
# error pointing at this extras specifier. Bio-Formats requires a JVM
# (Java 8+). The registry hides Bio-Formats capabilities when the
# handler module cannot be imported.
bioformats = [
    "python-bioformats>=4.0",
    "python-javabridge>=4.0",
]

[project.entry-points."scistudio.blocks"]
imaging = "scistudio_blocks_imaging:get_block_package"

[project.entry-points."scistudio.types"]
imaging = "scistudio_blocks_imaging:get_types"

[tool.hatch.build.targets.wheel]
packages = ["src/scistudio_blocks_imaging"]

[tool.pytest.ini_options]
markers = [
    "requires_cellpose: needs the [cellpose] extra",
    "requires_bioformats: needs the [bioformats] extra (python-bioformats + JVM)",
]
