[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scistudio-blocks-imaging"
version = "0.1.1"
description = "Phase 11 microscopy imaging blocks for SciStudio."
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "SciStudio Contributors"},
]
requires-python = ">=3.11"
dependencies = [
    # ADR-052 §13.1 developer contract: the package's public surface now relies
    # on the core stability decorators (``scistudio.stability``), the public
    # ``scistudio.core.types`` re-export root, and the sanctioned typed previewer
    # author surface (``PreviewRequest.storage`` / ``record_metadata``). These
    # landed on the core 0.3.1 baseline, so the floor moves 0.2.1a0 -> 0.3.1a0
    # to match ``scistudio-blocks-spectroscopy`` and the package template.
    "scistudio>=0.3.1a0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-image>=0.22",
    "tifffile>=2024.1",
    "zarr>=3.0",
    "matplotlib>=3.8",
    "imageio>=2.33",
    "pillow>=10.0",
    "pydantic>=2.0",
    # ADR-043 / spec adr-043-package-migration FR-017: required (not
    # optional) carrier for canonical OME-XML metadata propagated through
    # ``Image.Meta.ome`` and ``Label.Meta.ome``. Pinned ``>=0.5,<0.6``
    # because ome-types 0.5+ is pydantic v2-native with a stable model API.
    "ome-types>=0.5,<0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.10",
    "build>=1.2",
]
cellpose = [
    "cellpose>=3.0",
]
# ADR-043 / spec adr-043-package-migration FR-008: ``bioformats`` is an
# optional install extra following the existing ``[cellpose]`` pattern.
# The Bio-Formats handler module
# (``scistudio_blocks_imaging/io/bioformats_handler.py``) lazy-imports
# ``bioformats`` / ``javabridge`` and raises a clear missing-extras
# error pointing at this extras specifier. Bio-Formats requires a JVM
# (Java 8+). The registry hides Bio-Formats capabilities when the
# handler module cannot be imported.
bioformats = [
    "python-bioformats>=4.0",
    "python-javabridge>=4.0",
]

[project.entry-points."scistudio.blocks"]
imaging = "scistudio_blocks_imaging:get_block_package"

[project.entry-points."scistudio.types"]
imaging = "scistudio_blocks_imaging:get_types"

# ADR-048 SPEC 1 (FR-002/FR-025): installed-mode discovery of the package-owned
# Image/Label previewers. The monorepo dev fallback uses the module-level
# ``get_previewers`` re-exported from the package top-level ``__init__``.
[project.entry-points."scistudio.previewers"]
imaging = "scistudio_blocks_imaging.previewers:get_previewers"

# OTA hot-update source (#1784). Publish-time source of truth for
# scripts/ota_publish.py; mirrored in PackageInfo.ota (src/.../__init__.py),
# enforced equal by scripts/validate_contract.py.
[tool.scistudio.ota]
manifest_url = "https://github.com/jiazhenz026/scistudio-blocks-imaging/releases/download/ota-alpha/manifest.json"
channel = "alpha"
# Matches the ``scistudio>=0.3.1a0`` dependency floor: the ADR-052 §13.1
# contract this release adopts requires the core 0.3.1 baseline, so OTA
# recipients on an older base must reinstall rather than hot-patch.
min_core_base = "0.3.1"

[tool.hatch.build.targets.wheel]
packages = ["src/scistudio_blocks_imaging"]
# ADR-048 SPEC 1 (FR-024): the packaged previewer ships a self-contained vanilla
# ESM viewer served same-origin under ``/api/previews/assets/...``. Ensure the
# JS/CSS/SVG assets land in the wheel even though they are non-Python files.
artifacts = [
    "src/scistudio_blocks_imaging/previewers/assets/*.js",
    "src/scistudio_blocks_imaging/previewers/assets/*.mjs",
    "src/scistudio_blocks_imaging/previewers/assets/*.css",
    "src/scistudio_blocks_imaging/previewers/assets/*.svg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_cellpose: needs the [cellpose] extra",
    "requires_bioformats: needs the [bioformats] extra (python-bioformats + JVM)",
]

# Lint/format/type config mirrors SciStudio core so authors get the same
# feedback locally as in the monorepo.
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.isort]
known-first-party = ["scistudio_blocks_imaging"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
